# SoftEngBattleships2023

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
assets/: ship_test_1.xcf
assets/gimp/: battleship.xcf  battleship_red.xcf  carrier.xcf  carrier_red.xcf  cruiser.xcf  cruiser_red.xcf  destroyer.xcf  destroyer_red.xcf  submarine.xcf  submarine_red.xcf
docs/: Doxyfile.in
include/: GameController.h  GameWindow.h  battle_panel.h  board.h  client_network_manager.h  client_request.h  client_response_message_handler.h  client_shoot_request.h  connection_panel.h  end_panel.h  game_controller.h  game_instance.h  game_instance_manager.h  game_state.h  game_window.h  helper_functions.h  lobby_panel.h  player.h  player_manager.h  preparation_panel.h  request_handler.h  response_listener_thread.h  server_network_manager.h  server_request_handler.h  server_response.h  ship.h
include/network/: message_types.h
include/network/messages/: base_message.h  game_over_message.h  gave_up_message.h  join_message.h  message.h  prepared_message.h  ready_message.h  shot_message.h
include/network/requests/: client_prepared_request.h  client_ready_request.h  client_shoot_request.h  give_up_request.h  join_request.h  prepared_request.h  ready_request.h  shoot_request.h
include/network/responses/: give_up_response.h  join_response.h  prepared_response.h  ready_response.h  response.h  shoot_response.h
include/requests/: client_prepared_request.h  client_request.h
json_examples/messages/: game_over_message.json  gave_up_message.json  joined_message.json  prepared_message.json  shot_message.json
json_examples/messages.json/: prepared_message.json
json_examples/requests/: give_up_request.json  join_request.json  prepared_request.json  ready_request.json  shoot_request.json
json_examples/responses/: give_up_response.json  prepared_response.json  shoot_response.json
meetings/: 1. SE Project - Pixelfleet Meeting 26.4.23.md  2. SE Project - Pixelfleet Meeting 3.5.23.md  3. SE Project - Pixelfleet Meeting 10.5.23.md  GUI Meeting - Pixelfleet Meeting 16.05.23.md  New Project Plan.md
src/: main.cpp
src/client/: GameController.cpp  client_response_message_handler.cpp  game_controller.cpp  main.cpp
src/client/network/: client_network_manager.cpp
src/client/panels/: battle_panel.cpp  connection_panel.cpp  end_panel.cpp  lobby_panel.cpp  preparation_panel.cpp
src/client/windows/: GameWindow.cpp  game_window.cpp
src/common/: helper_functions.cpp  main.cpp
src/common/game_state/: board.cpp  board.h  game_state.cpp  game_state.h  player.cpp  player.h  ship.cpp  ship.h
src/common/game_state/include/: board.h  game_state.h  player.h  ship.h
src/common/helpers/: helper_functions.h  random_id.h
src/common/network/: client_request.cpp  message_types.cpp  server_response.cpp
src/common/network/messages/: base_message.cpp  game_over_message.cpp  gave_up_message.cpp  join_message.cpp  message.cpp  prepared_message.cpp  ready_message.cpp  shot_message.cpp
src/common/network/requests/: client_join_request.cpp  client_prepared_request.cpp  client_ready_request.cpp  client_request.cpp  client_request.h  client_shoot_request.cpp  give_up_request.cpp  join_request.cpp  prepared_request.cpp  ready_request.cpp  shoot_request.cpp
src/common/network/requests/examples/: join_request.json
src/common/network/respones/: give_up_response.cpp  join_response.cpp  prepared_response.cpp  ready_response.cpp  response.cpp  shoot_response.cpp
src/common/network/responses/: server_response.cpp  server_response.h
src/common/network/responses/examples/: join_response.json  ready_response.json
src/common/tests/: board.test.cpp  client_request.test.cpp  game_state.test.cpp  player.test.cpp  server_response.test.cpp  ship.test.cpp
src/server/: game_instance.cpp  game_instance.h  game_instance_manager.cpp  game_instance_manager.h  main.cpp  player_manager.cpp  player_manager.h  request_handler.cpp  server_network_manager.cpp  server_network_manager.h  server_request_handler.cpp
src/server/include/: server_network_manager.h
src/server/tests/: player_manager.test.cpp
tests/: backend_integraiton.test.cpp  backend_integration.test.cpp  board.test.cpp  client_request.test.cpp  game_instance.test.cpp  game_instance_manager.test.cpp  game_state.test.cpp  player.test.cpp  player_manager.test.cpp  request_handler.test.cpp  requests.test.cpp  responses.test.cpp  server_network_manager.test.cpp  server_response.test.cpp  ship.test.cpp
tests/integration/: backend_integration.test.cpp
tests/network/: server_request_handler.test.cpp
tests/network/messages/: game_over_message.test.cpp  gave_up_message.test.cpp  messages.test.cpp  prepared_message.test.cpp  shot_message.test.cpp
tests/network/requests/: give_up_request.test.cpp  prepared_request.test.cpp  shoot_request.test.cpp
tests/network/responses/: give_up_response.test.cpp  prepared_response.test.cpp  shoot_response.test.cpp
